--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,8 @@
 gems:
   - jekyll-redirect-from
+defaults:
+  -
+    scope:
+      path: "subdir2/index.html"
+    values:
+      redirect_from: "/index.html"
