Add YAML comment to make searching easier
Signed-off-by: Frank Kotsianas <fkotsianas@pivotal.io>

--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,6 @@ gems:
 defaults:
   -
     scope:
-      path: "subdir2/index.html"
+      path: "subdir2/index.html" # redirect_root_to_here
     values:
       redirect_from: "/index.html"
